UPDATE Fixed issue with nav bar text overlapping on narrow devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,3 +204,13 @@ footer.footer {
 .contact-icon:hover {
     color: #dc3545;
 }
+
+
+@media only screen and (max-width: 380px) {
+.navbar-brand {
+        font-family: 'Lunasima', sans-serif;
+        font-size: 22px;
+        font-weight: 600;
+        color: white;
+    }
+}
